[gd_scene load_steps=5 format=2]

[ext_resource path="res://scene/circuit.tscn" type="PackedScene" id=1]
[ext_resource path="res://scene/car.tscn" type="PackedScene" id=2]
[ext_resource path="res://script/race.gd" type="Script" id=3]

[sub_resource type="Curve2D" id=1]
bake_interval = 50.0
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 736, -1056, -381.414, 32.1594, 381.414, -32.1594, 1952, -1088, -29.6524, -349.407, 29.6524, 349.407, 2528, -928, 68.0357, -544.286, -68.0357, 544.286, 1376, -96, 8.48528, -432.749, -8.48528, 432.749, 2496, 736, 455.377, 76.599, -455.377, -76.599, 1280, 1344, 681.651, 33.9411, -681.651, -33.9411, -448, 64, 438.177, 239.838, -438.177, -239.838, -2176, 1440, 566.211, 122.717, -566.211, -122.717, -2320, 16, -36.7696, 90.5097, 36.7696, -90.5097, -2248, -856, -219.843, 19.4773, 219.843, -19.4773, -1952, -1056, 0, 0, 0, 0, -32, -1056, 0, 0, 0, 0, 736, -1056 )
}

[node name="race" type="Node2D"]
script = ExtResource( 3 )

[node name="camera" type="Camera2D" parent="."]
current = true
zoom = Vector2( 2.5, 2.5 )
drag_margin_v_enabled = true

[node name="circuit" parent="." instance=ExtResource( 1 )]
node_path = NodePath("../path_road")

[node name="path_road" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="cars" type="Node2D" parent="."]

[node name="car_1" parent="cars" instance=ExtResource( 2 )]
modulate = Color( 0.568627, 0.419608, 0.0235294, 1 )
position = Vector2( -1824, -984 )
car_name = "voiture 2"
max_speed = 75.0
accelerate_G = 5.0
direction_angle_degree = 30.0

[node name="car_2" parent="cars" instance=ExtResource( 2 )]
modulate = Color( 0.298039, 0.2, 1, 1 )
position = Vector2( -1672, -1120 )
car_name = "voiture 1"

[node name="car_3" parent="cars" instance=ExtResource( 2 )]
modulate = Color( 0.568627, 0.419608, 0.0235294, 1 )
position = Vector2( -1520, -984 )
car_name = "voiture 2"
max_speed = 75.0
accelerate_G = 5.0
direction_angle_degree = 30.0

[node name="car_4" parent="cars" instance=ExtResource( 2 )]
modulate = Color( 0.298039, 0.2, 1, 1 )
position = Vector2( -1368, -1120 )
car_name = "voiture 1"

[node name="car_5" parent="cars" instance=ExtResource( 2 )]
modulate = Color( 0.568627, 0.419608, 0.0235294, 1 )
position = Vector2( -1248, -984 )
car_name = "voiture 2"
max_speed = 75.0
accelerate_G = 5.0
direction_angle_degree = 30.0

[node name="car_6" parent="cars" instance=ExtResource( 2 )]
modulate = Color( 0.298039, 0.2, 1, 1 )
position = Vector2( -1096, -1120 )
car_name = "voiture 1"

[node name="car_7" parent="cars" instance=ExtResource( 2 )]
modulate = Color( 0.568627, 0.419608, 0.0235294, 1 )
position = Vector2( -968, -984 )
car_name = "voiture 2"
max_speed = 75.0
accelerate_G = 5.0
direction_angle_degree = 30.0

[node name="car_8" parent="cars" instance=ExtResource( 2 )]
modulate = Color( 0.298039, 0.2, 1, 1 )
position = Vector2( -816, -1120 )
car_name = "voiture 1"

[node name="car_9" parent="cars" instance=ExtResource( 2 )]
modulate = Color( 0.568627, 0.419608, 0.0235294, 1 )
position = Vector2( -672, -984 )
car_name = "voiture 2"
max_speed = 75.0
accelerate_G = 5.0
direction_angle_degree = 30.0

[node name="car_10" parent="cars" instance=ExtResource( 2 )]
modulate = Color( 0.298039, 0.2, 1, 1 )
position = Vector2( -520, -1120 )
car_name = "voiture 1"

[node name="car_11" parent="cars" instance=ExtResource( 2 )]
modulate = Color( 0.568627, 0.419608, 0.0235294, 1 )
position = Vector2( -384, -984 )
car_name = "voiture 2"
max_speed = 75.0
accelerate_G = 5.0
direction_angle_degree = 30.0

[node name="car_12" parent="cars" instance=ExtResource( 2 )]
modulate = Color( 0.298039, 0.2, 1, 1 )
position = Vector2( -232, -1120 )
car_name = "voiture 1"

[node name="car_13" parent="cars" instance=ExtResource( 2 )]
modulate = Color( 0.568627, 0.419608, 0.0235294, 1 )
position = Vector2( -80, -984 )
car_name = "voiture 2"
max_speed = 75.0
accelerate_G = 5.0
direction_angle_degree = 30.0

[node name="car_14" parent="cars" instance=ExtResource( 2 )]
modulate = Color( 0.298039, 0.2, 1, 1 )
position = Vector2( 72, -1120 )
car_name = "voiture 1"

[node name="car_15" parent="cars" instance=ExtResource( 2 )]
modulate = Color( 0.568627, 0.419608, 0.0235294, 1 )
position = Vector2( 192, -984 )
car_name = "voiture 2"
max_speed = 75.0
accelerate_G = 5.0
direction_angle_degree = 30.0

[node name="car_16" parent="cars" instance=ExtResource( 2 )]
modulate = Color( 0.298039, 0.2, 1, 1 )
position = Vector2( 344, -1120 )
car_name = "voiture 1"

[node name="car_17" parent="cars" instance=ExtResource( 2 )]
modulate = Color( 0.568627, 0.419608, 0.0235294, 1 )
position = Vector2( 472, -984 )
car_name = "voiture 2"
max_speed = 75.0
accelerate_G = 5.0
direction_angle_degree = 30.0

[node name="car_18" parent="cars" instance=ExtResource( 2 )]
modulate = Color( 0.298039, 0.2, 1, 1 )
position = Vector2( 624, -1120 )
car_name = "voiture 1"

[node name="car_19" parent="cars" instance=ExtResource( 2 )]
modulate = Color( 0.568627, 0.419608, 0.0235294, 1 )
position = Vector2( 768, -984 )
car_name = "voiture 2"
max_speed = 75.0
accelerate_G = 5.0
direction_angle_degree = 30.0

[node name="car_20" parent="cars" instance=ExtResource( 2 )]
modulate = Color( 0.298039, 0.2, 1, 1 )
position = Vector2( 920, -1120 )
car_name = "voiture 1"

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="can" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="can"]
margin_right = 152.0
margin_bottom = 80.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lb_car_1" type="Label" parent="can"]
modulate = Color( 0.298039, 0.2, 1, 1 )
margin_left = 8.0
margin_top = 48.0
margin_right = 118.0
margin_bottom = 62.0
text = "voiture 2 : 0km/h"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lb_car_2" type="Label" parent="can"]
modulate = Color( 0.968627, 0.207843, 0.423529, 1 )
margin_left = 8.0
margin_top = 16.0
margin_right = 118.0
margin_bottom = 30.0
text = "voiture 1 : 0km/h"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
